bin_PROGRAMS=mxl_test run_counter info_test loadfile iterate
mxl_test_SOURCES=main.cpp
run_counter_SOURCES=test.cpp
info_test_SOURCES=info.cpp
loadfile_SOURCES=loadfile.cpp
iterate_SOURCES=iterate.cpp

AM_CPPFLAGS = -std=c++11 -I../mxl
mxl_test_LDADD= -L../mxl -lMXL
run_counter_LDADD= -L../mxl -lMXL
info_test_LDADD= -L../mxl -lMXL
loadfile_LDADD= -L../mxl -lMXL
iterate_LDADD = -L../mxl -lMXL
